System fails to enter hardware sleep with closed lid on HP 15s -eq2xxx
Brief summary of the problem:
I would like to for my HP 15s -eq2xxx laptop to have reduced batter drain during sleep. Currently it loses charge at about 8% hour, so overnight it is almost guaranteed to loose charge fully.
I have been digging on the cause and it appears to be related to the fact that s3 sleep is not available, I am not aware what performance s0ix is supposed to have since I don't have Windows installed, however don't think even s0ix is supposed to be this bad (judging from another laptop I got).
Hardware description:
- amd_s2idle report: s2idle_report-2023-07-05.txt
System information:
- Distro name and Version: Ubuntu 22.04.2 LTS
- Kernel version: Linux grigory-laptop 6.2.14-060214-generic #202305010032 SMP PREEMPT_DYNAMIC Mon May 1 01:32:48 UTC 2023 x86_64 x86_64 x86_64 GNU/Linux
The above kernel is the one I got using Mainline Kernel Installer. I used to have issues waking up altogether (black screen issue similar to this issue, no logs in system journal etc), however not sure why it doesn't seem happen anymore exactly.
? Maybe due to some kernel parameter. I have addedinitcall_debug no_console_suspend ignore_loglevel
to logs to help identify what's going on, however it seem to have stopped happening at that point.
How to reproduce the issue:
I can reproduce the issue just by closing laptop lid and seeing no power LED changes (also fans keep on running pretty loudly).
I have tried to patch my ACPI table using a post from a person with a similar laptop to enable s3 and the sleep seems to work (judging by flashing power icon) but on wake up my hard drive would become readonly (or even not readable at all) and my system would crash (and not be able to write any logs to sdd).
Would be very grateful for any help identifying the issue with s0ix. s3 would be nice to get working perhaps but since I don't reach hardware sleep anyway it appears it is not a fair s3 v3 s0ix comparison anyway.
Attached files:
Here is my decompiled ACPI: dsdt.dsl
And here is my patched ACPI (if it might be relevant) patched_dsdt.dsl